--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  padding: 30px;
+  /*padding: 30px;*/
   display: flex;
 }
 
@@ -15,6 +15,20 @@
 .active-filter {
   background-color: lightgreen;
 }
+.is-done {
+  opacity: 0.5;
+}
+.app {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+}
+
 .is-done {
   opacity: 0.5;
 }
